# hassapi

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml
src/hassapi/: __init__.py  __main__.py  const.py  exceptions.py
src/hassapi/client/: __init__.py  auth.py  base.py  events.py  services.py  states.py  template.py
src/hassapi/models/: __init__.py  base.py  event.py  service.py  state.py
tests/client/: __init__.py  test_auth.py  test_base.py
tests/models/: __init__.py  test_base.py
