[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.36.2"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99

[tool.mypy]
python_version = "3.8"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "tenacity.*"
ignore_missing_imports = true