[metadata]
name = hassapi
version = 0.0.1
author = Vadim Titov
author_email = titov.hse@gmail.com
description = Home Assistant Python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hass-api/hassapi
project_urls =
    Bug Tracker = https://github.com/hass-api/hassapi/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Home Automation

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where=src

[options.extras_require]
test = pytest

[coverage:run]
branch = true
parallel = true

[coverage:report]
skip_covered = true
show_missing = true
sort = Cover
